# opencv-android-library

./: README.md
openCVLibrary/: .gitignore  CMakeLists.txt  build.gradle  lint.xml
openCVLibrary/gradle/wrapper/: gradle-wrapper.properties
openCVLibrary/src/main/: AndroidManifest.xml  jniLibs  res
openCVLibrary/src/main/aidl/org/opencv/: engine
openCVLibrary/src/main/cpp/: include  native-lib.cpp
openCVLibrary/src/main/java/: org
